27Dec21=======================================================================
1. Fix "kwalitee control" issue in /spider/cmd/dx.pl.
22Dec21=======================================================================
1. Add the possibility to do "sender verify" that spots (and later on, other
   things like announce etc) are coming from spotters that exist on the node
   that the PC11/61 says it does. At the moment, this is advisory as many
   users seem to be on web clusters and many of them do not send PC61 and also
   don't update the node's routing tables that normal node usage would do.
2. Prioritise PC61 spots over PC11 spots wherever possible. Also promote PC11
   spots to PC61 where the spotter's IP is known.
3. Add a shell script "perlbrew-dxspider" that can be used for starting the
   node when using perlbrew (i.e. more modern perls) on older distros such
   as Centos 7/8.
4. Allow to "dx by <spotter> ip <ip address> <qrg> <spot call> <comment>.
   This is added as a convenience measure for webcluster authors while waiting
   for the internal websocket interface (or because they cannot use that). 
   This can only be used by suitably privileged users. 
   This likely to be a temporary measure and will be immediately withdrawn if
   there is any sign of abuse. 
11Dec21=======================================================================
1. Removed dependency on perl Git package.
2. Force code to change directory to $DXSPIDER_ROOT || '/spider'. Also force
   git -C $root describe.
3. Change git commands AGAIN to work on old perls (which mojo won't work on,
   but it makes my life easier).
4. Change version strings to include the perl version in use. 
10Dec21=======================================================================
1. Fix the output of set/dxgrid, set/usstate and set/dxcq or set/dxitu to how
   it was always supposed to be since 2003.
09Dec21=======================================================================