@@ -103,17 +103,17 @@ package CmdAlias;
 				  '^sb$', 'send noprivate', 'send',
 				  '^set/dbg$', 'set/debug', 'set/debug',
 				  '^set/home$', 'set/homenode', 'set/homenode',
-				  '^set/nobe', 'unset/beep', 'unset/beep',
-				  '^set/nohe', 'unset/here', 'unset/here',
-				  '^set/noan', 'unset/announce', 'unset/announce',
-				  '^set/nodxg', 'unset/dxgrid', 'unset/dxgrid',
-				  '^set/nodx', 'unset/dx', 'unset/dx',
-				  '^set/noe', 'unset/echo', 'unset/echo',
-				  '^set/nota', 'unset/talk', 'unset/talk',
-				  '^set/noww', 'unset/wwv', 'unset/wwv',
-				  '^set/nowx', 'unset/wx', 'unset/wx',
-				  '^set/nosk', 'set/wantrbn none', 'set/wantrbn',
-				  '^set/sk', 'set/wantrbn', 'set/wantrbn',
+				  '^set/nobee?p?$', 'unset/beep', 'unset/beep',
+				  '^set/noher?e?$', 'unset/here', 'unset/here',
+				  '^set/noann?o?u?', 'unset/announce', 'unset/announce',
+				  '^set/nodxgr?i?d?$', 'unset/dxgrid', 'unset/dxgrid',
+				  '^set/nodx$', 'unset/dx', 'unset/dx',
+				  '^set/noec?h?o?$', 'unset/echo', 'unset/echo',
+				  '^set/notal?k?$', 'unset/talk', 'unset/talk',
+				  '^set/nowwv?$', 'unset/wwv', 'unset/wwv',
+				  '^set/nowx$', 'unset/wx', 'unset/wx',
+				  '^set/noski?m?m?e?r?$', 'set/wantrbn none', 'set/wantrbn',
+				  '^set/ski?m?m?e?r?$', 'set/wantrbn', 'set/wantrbn',
 				  '^set$', 'apropos set', 'apropos',
 				  '^sho?w?/u$', 'show/user', 'show/user',
 				  '^sho?w?/bul', 'show/files bulletins', 'show/files',
