@@ -41,6 +41,10 @@ $dupage = 12*3600;				# the length of time to hold spot dups
 $dirprefix = "$main::local_data/wwv";
 $param = "$dirprefix/param";
 
+our $maxcache = 10;
+our @cache;
+
+
 $filterdef = bless ([
 			  # tag, sort, field, priv, special parser 
 			  ['by', 'c', 0],
@@ -58,6 +62,10 @@ sub init
 {
 	$fp = DXLog::new('wwv', 'dat', 'm');
 	do "$param" if -e "$param";
+	# read in existing data
+	@cache = readfile($main::systime);
+	shift @cache while @cache > $maxcache;	
+	dbg(sprintf "WWV read in last %d records into cache", scalar @cache);	
 	confess $@ if $@;
 }
 
@@ -79,7 +87,10 @@ sub store
 	close $fh;
 	
 	# log it
-	$fp->writeunix($date, "$from^$date^$sfi^$a^$k^$forecast^$node^$r");
+	my $s ="$from^$date^$sfi^$a^$k^$forecast^$node^$r";
+	$fp->writeunix($date, $s);
+	push @cache, [ split /\^/, $s ];
+	shift @cache while @cache > $maxcache; 
 }
 
 # update WWV info in one go (usually from a PC23)
@@ -177,15 +188,22 @@ sub search
 {
 	my $from = shift;
 	my $to = shift;
-	my $date = $fp->unixtoj(shift);
+	my $t = shift;
+	my $date = $fp->unixtoj($t);
 	my $pattern = shift;
 	my $search;
 	my @out;
 	my $eval;
 	my $count;
-	
-	$search = 1;
-	$eval = qq(
+
+	if ($t == $main::systime && ($to <= $maxcache)) {
+		dbg("using wwv cache") if isdbg('wwv');
+		@out = reverse @cache;
+		pop @out while @out > $to;
+	} else {
+		dbg("using wwv file(s))") if isdbg('wwv');
+		$search = 1;
+		$eval = qq(
 			   my \$c;
 			   my \$ref;
 			   for (\$c = \$#in; \$c >= 0; \$c--) {
@@ -199,22 +217,23 @@ sub search
 				}
 			  );
 	
-	$fp->close;					# close any open files
-	
-	my $fh = $fp->open($date); 
-	for ($count = 0; $count < $to; ) {
-		my @in = ();
-		if ($fh) {
-			while (<$fh>) {
-				chomp;
-				push @in, [ split '\^' ] if length > 2;
+		$fp->close;					# close any open files
+		
+		my $fh = $fp->open($date); 
+		for ($count = 0; $count < $to; ) {
+			my @in = ();
+			if ($fh) {
+				while (<$fh>) {
+					chomp;
+					push @in, [ split '\^' ] if length > 2;
+				}
+				eval $eval;			# do the search on this file
+				return ("Geomag search error", $@) if $@;
+				last if $count >= $to; # stop after n
 			}
-			eval $eval;			# do the search on this file
-			return ("Geomag search error", $@) if $@;
-			last if $count >= $to; # stop after n
+			$fh = $fp->openprev();	# get the next file
+			last if !$fh;
 		}
-		$fh = $fp->openprev();	# get the next file
-		last if !$fh;
 	}
 	
 	return @out;
