@@ -11,6 +11,8 @@ package Route::User;
 use DXDebug;
 use Route;
 use DXUtil;
+use DXJSON;
+use Time::HiRes qw(gettimeofday);
 
 use strict;
 
@@ -20,6 +22,8 @@ use vars qw(%list %valid @ISA $max $filterdef);
 $filterdef = $Route::filterdef;
 %list = ();
 $max = 0;
+
+our $cachefn = localdata('route_user_cache');
 
 sub count
 {
@@ -92,6 +96,30 @@ sub delparent
 {
 	my $self = shift;
     return $self->_dellist('parent', @_);
+}
+
+sub TO_JSON { return { %{ shift() } }; }
+
+sub write_cache
+{
+	my $json = DXJSON->new;
+	$json->canonical(0)->allow_blessed(1)->convert_blessed(1);
+	
+	my $ta = [ gettimeofday ];
+	$json->indent(1)->canonical(1) if isdbg('routecache');
+	my $s = eval {$json->encode(\%list)};
+	if ($s) {
+		my $fh = IO::File->new(">$cachefn") or confess("writing $cachefn $!");
+		$fh->print($s);
+		$fh->close;
+	} else {
+		dbg("Route::User:Write_cache error '$@'");
+		return;
+	}
+	$json->indent(0)->canonical(0);
+	my $diff = _diffms($ta);
+	my $size = sprintf('%.3fKB', (length($s) / 1000));
+	dbg("Route::User:WRITE_CACHE size: $size time to write: $diff mS");
 }
 
 #
